fixed login routing and btn alignment

--- a/app/src/app/modules/user/pages/dashboard/dashboard.component.scss
+++ b/app/src/app/modules/user/pages/dashboard/dashboard.component.scss
@@ -26,7 +26,8 @@
         max-width:120px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;
         img{width:20px; margin-right:5px; display:inline-block;}
     }
-    .btn-dark{vertical-align:top; margin-top:-8px; margin-left:10px; background-color:#4E4E4E; color:#C3FF43; font-size:11px!important; padding:0.75rem 1.5rem!important;}
+    .wrongNetwork{font-size:11px!important; max-width:120px!important;}
+    .btn-dark{vertical-align:top; margin-left:10px; background-color:#4E4E4E; color:#C3FF43; font-size:11px!important; padding:0.75rem 1.5rem!important;}
 }
 
 .social-icon{ margin:10px 0 0; padding:0; list-style:0;
